// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceDetailsFooter renders per snapshot when all card interactions are supported (ie, web) 1`] = `
<div
  className="foot"
>
  <div
    className="highlightStatus"
  >
    <HighlightVisibleIcon />
    <StyledLabelBase>
      Highlight visible
    </StyledLabelBase>
  </div>
  <CardFooterFarButtons
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
        "unifiedResultToIssueFilingDataConverter": [typemoq mock object],
      }
    }
    issueDetailsData={Object {}}
    kebabMenuAriaLabel="More Actions for failure instance body img in rule some-rule"
    userConfigurationStoreData={Object {}}
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot when only UserConfig-agnostic card interactions are supported (ie, electron) 1`] = `
<div
  className="foot"
>
  <div
    className="highlightStatus"
  >
    <HighlightVisibleIcon />
    <StyledLabelBase>
      Highlight visible
    </StyledLabelBase>
  </div>
  <CardFooterFarButtons
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": false,
        },
        "unifiedResultToIssueFilingDataConverter": [typemoq mock object],
      }
    }
    issueDetailsData={Object {}}
    kebabMenuAriaLabel="More Actions for failure instance body img in rule some-rule"
    userConfigurationStoreData={Object {}}
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot when only highlighting card interactions are supported (ie, electron) 1`] = `
<div
  className="foot"
>
  <div
    className="highlightStatus"
  >
    <HighlightVisibleIcon />
    <StyledLabelBase>
      Highlight visible
    </StyledLabelBase>
  </div>
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="hidden" 1`] = `
<div
  className="foot"
>
  <div
    className="highlightStatus"
  >
    <HighlightHiddenIcon />
    <StyledLabelBase>
      Highlight hidden
    </StyledLabelBase>
  </div>
  <CardFooterFarButtons
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
        "unifiedResultToIssueFilingDataConverter": [typemoq mock object],
      }
    }
    issueDetailsData={Object {}}
    kebabMenuAriaLabel="More Actions for failure instance body img in rule some-rule"
    userConfigurationStoreData={Object {}}
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="unavailable" 1`] = `
<div
  className="foot"
>
  <div
    className="highlightStatus"
  >
    <HighlightUnavailableIcon />
    <StyledLabelBase>
      Highlight unavailable
    </StyledLabelBase>
  </div>
  <CardFooterFarButtons
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
        "unifiedResultToIssueFilingDataConverter": [typemoq mock object],
      }
    }
    issueDetailsData={Object {}}
    kebabMenuAriaLabel="More Actions for failure instance body img in rule some-rule"
    userConfigurationStoreData={Object {}}
  />
</div>
`;

exports[`InstanceDetailsFooter renders per snapshot with highlightState="visible" 1`] = `
<div
  className="foot"
>
  <div
    className="highlightStatus"
  >
    <HighlightVisibleIcon />
    <StyledLabelBase>
      Highlight visible
    </StyledLabelBase>
  </div>
  <CardFooterFarButtons
    deps={
      Object {
        "cardInteractionSupport": Object {
          "supportsCopyFailureDetails": true,
          "supportsHighlighting": true,
          "supportsIssueFiling": true,
        },
        "unifiedResultToIssueFilingDataConverter": [typemoq mock object],
      }
    }
    issueDetailsData={Object {}}
    kebabMenuAriaLabel="More Actions for failure instance body img in rule some-rule"
    userConfigurationStoreData={Object {}}
  />
</div>
`;
